# zap-typist

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  INSTALL.md  Makefile  NOTICE.md  README.md  coverage.json  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
ai-forge/: py-review-report-module-2.md  py-review-report.md  python-api-tasks.md  python-architecture-task.md  python-architecture-tasks.md  python-async-tasks.md  python-ci-cd-tasks.md  python-configuration-task.md  python-configuration-tasks.md  python-data-handling-task.md  python-data-handling-tasks.md  python-dependencies-tasks.md  python-error-handling-tasks.md  python-hardcodes-tasks.md  python-packaging-tasks.md  python-performance-tasks.md  python-scalability-tasks.md  python-security-tasks.md  python-testing-task.md  python-testing-tasks.md  python-typing-task.md  python-typing-tasks.md  python-web-framework-tasks.md
infra/: INFRA-COST-ESTIMATE.md  README.md
scripts/: MIGRATION-v1.0.1.py  backup_db.sh  bootstrap.sh  health-check.sh  run.sh  slo-check.sh
src/zap_typist/: __main__.py  app.py
src/zap_typist/config/: __init__.py  paths.py  settings.py
src/zap_typist/db/: __init__.py  models.py  seed.py  session.py
src/zap_typist/domain/: __init__.py  constants.py  flow.py  settings_schema.py  validators.py
src/zap_typist/engine/: __init__.py  base_worker.py  query_generator_worker.py
src/zap_typist/imbound/: query_generator.py
src/zap_typist/imbound/constants/: desire_rules.py  feminine_names.py  message_templates.py
src/zap_typist/seeders/: __init__.py
src/zap_typist/services/: lead_service.py
src/zap_typist/ui/: dialogs.py  main_window.py  styles.py  tab1_gerar_queries.py
src/zap_typist/ui/aba1/: __init__.py  lead_card.py  lead_card_list.py  lead_form.py
src/zap_typist/ui/widgets/: __init__.py  form_validators.py  terminal_widget.py
src/zap_typist/utils/: __init__.py  cache.py  e164.py  logger.py  single_instance.py
tests/: conftest.py
tests/factories/: __init__.py  db.py  session.py
tests/integration/: conftest.py  test_aba1_e2e.py  test_timestamps_tz_aware.py  test_triggers_updated_at.py
tests/unit/: test_aba1_lead_card.py  test_aba1_lead_card_list.py  test_aba1_pii_audit.py  test_aba1_terminal_perf.py  test_app_boot_errors.py  test_base_worker.py  test_boot_smoke.py  test_cache_errors.py  test_e164.py  test_e164_property.py  test_e164_validator.py  test_excepthook.py  test_lead_form.py  test_lead_service.py  test_migration_v1_0_1.py  test_models.py  test_path_constants.py  test_pii_filter.py  test_query_generator.py  test_query_generator_worker.py  test_retry_on_locked.py  test_seed.py  test_session.py  test_settings.py  test_settings_schema.py  test_tab1_gerar_queries.py  test_time_window.py  test_utils.py
tests/unit/shared/: conftest.py  test_benchmarks_shared.py  test_benchmarks_terminal.py  test_benchmarks_worker.py  test_form_validators.py  test_security_shared.py  test_terminal_widget.py
