[project]
name = "zap-typist"
version = "0.1.0"
description = "Digitador determinístico de WhatsApp para leads"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = []

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
strict = false
warn_unused_ignores = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
