[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zap-typist"
version = "0.1.0"
description = "Digitador determinístico de WhatsApp para leads"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
  { name = "Pedro Corgnati", email = "corgnati.pedro@gmail.com" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: X11 Applications :: Qt",
  "Intended Audience :: End Users/Desktop",
  "License :: Other/Proprietary License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Communications :: Chat",
  "Topic :: Office/Business",
  "Private :: Do Not Upload",
]
dependencies = [
  "PySide6>=6.6,<7",
  "SQLAlchemy>=2.0,<3",
  "pydantic>=2.0,<3",
  "pydantic-settings>=2.0,<3",
  "python-dotenv>=1.0,<2",
]

[project.urls]
Repository = "https://github.com/Pedrocorgnati/zap-typist"
Issues = "https://github.com/Pedrocorgnati/zap-typist/issues"

[project.scripts]
zap-typist = "zap_typist.app:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "pytest-qt>=4.4",
  "ruff>=0.4",
  "mypy>=1.10",
  "factory-boy>=3.3",
  "deptry>=0.20",
  "hypothesis>=6.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
zap_typist = ["py.typed"]

[tool.deptry]
known_first_party = ["zap_typist"]
# python-dotenv: lido implicitamente por pydantic-settings BaseSettings (env_file=".env").
# Demais entradas: ferramentas de dev/test invocadas via CLI (nao importadas no codigo).
[tool.deptry.per_rule_ignores]
DEP002 = [
  "python-dotenv",
  "pytest",
  "pytest-cov",
  "pytest-qt",
  "ruff",
  "mypy",
  "factory-boy",
  "deptry",
]
[tool.deptry.package_module_name_map]
factory-boy = "factory"


[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E", "F", "W", "I", "B", "UP",
  "S",      # flake8-bandit
  "RUF",    # ruff-specific
  "SIM",    # flake8-simplify
  "ANN",    # type annotations
  "T20",    # flake8-print
]
ignore = [
  "ANN401",  # any-type — permitido em logger payload
  "S101",    # assert statements — usados em modelos para invariants
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "S101", "S106", "S311", "B017", "SIM117", "SIM300"]
"src/zap_typist/__main__.py" = ["T20"]
"scripts/**" = ["T20"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
strict = false
warn_unused_ignores = true
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["zap_typist.db.*", "zap_typist.utils.*"]
disallow_untyped_defs = true
disallow_any_generics = true
warn_return_any = true

[[tool.mypy.overrides]]
module = ["PySide6.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
  "--cov=zap_typist",
  "--cov-report=term-missing",
  "--cov-fail-under=80",
]
markers = [
  "unit: testes unitarios puros (DB in-memory, sem Qt)",
  "integration: testes que tocam SQLite file-based ou subprocess",
  "qt: testes que requerem QApplication (lentos, isolados)",
  "boot: cenarios de inicializacao (single-instance, excepthook)",
]

[tool.coverage.run]
source = ["src/zap_typist"]
branch = true
omit = [
  "src/zap_typist/__main__.py",
  "src/zap_typist/ui/**",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
]
